# fake-water

./: CMakeLists.txt  README.md
shaders/: fragment.fs  vertex.vs
shaders/screen/: fragment.fs  vertex.vs
shaders/skybox/: fragment.fs  vertex.vs
shaders/waves/: fragment.fs  vertex.vs
src/: gerstner.cpp  main.cpp
